Corrected scrollbar issue according to https://bitbucket.org/alexg/syntaxhighlighter/issue/177/superfluous-vertical-scrollbars-in-chrome

--- a/trunk/data/web/shared/shCoreDDMSence.css
+++ b/trunk/data/web/shared/shCoreDDMSence.css
@@ -57,7 +57,8 @@
 .syntaxhighlighter {
   width: 100% !important;
   margin: 1em 0 1em 0 !important;
-  position: relative !important;
+  padding-bottom: 1px;
+  position: relative !important; 
   overflow: auto !important;
   font-size: 1em !important;
 }
